Fixed how code blocks and tables are displayed on small screens

--- a/include/content.css
+++ b/include/content.css
@@ -13,6 +13,10 @@ html .content * {
     justify-content: left;
 }
 
+.content {
+    min-width: 0;
+}
+
 .content p {
     margin: 1rem 0 0 0;
     line-height: 1.6; 
@@ -62,8 +66,10 @@ html .content * {
 pre {
     margin-left: 0;
     text-indent: 0;
+    width: 100%;
     overflow-x: auto;
 }
+
 
 
 //.codehilite pre {
@@ -100,11 +106,24 @@ pre {
 
 .content table {
   width: 100%;
+  min-width: 100%;
+  //width: max-content;
   border: 1px solid grey;
   border-collapse: separate;
   border-spacing: 0;
   border-radius: var(--border-radius); 
   overflow: hidden;
+  //overflow-x: scroll;
+  //min-width: 0;
+}
+
+
+.content .table-wrapper {
+    width: 100%; 
+    //background-color: pink;
+    overflow-x: scroll; 
+    max-width: 100%;
+    min-width: 0;  /* Important for grid/flex parents */
 }
 
 .content th,
@@ -113,6 +132,10 @@ pre {
   text-align: left;
   border-right: 1px solid grey; /* Vertical dividers */
   border-bottom: 1px solid grey; /* Horizontal dividers */
+  min-width: 7.5rem;  /* Or whatever makes sense */
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;  /* Allow wrapping */
 }
 
 /* Remove right border from last column */
@@ -131,6 +154,10 @@ pre {
   font-weight: bold;
 }
 
+
+
+
+
 .content img {
     width: 50%;
     margin-left: auto;
@@ -141,6 +168,12 @@ pre {
   //border: 1px solid grey;
   //border-radius: var(--border-radius); 
   //padding: ;
+}
+
+.grid-table {
+    display: grid;
+    width: 100%;
+    grid-auto-columns: 1fr 1fr 1fr;
 }
 
 
